# opencv-speed-detector

./: pyproject.toml  speed_estimation_dl.py  speed_estimation_dl_video.py
output/: log.csv
pyimagesearch/: trackableobject.py
