[tool.poetry]
name = "opencv-speed-detector"
version = "0.0.1"
description = "Vehicle speed detection using python opencv"
authors = ["Shakib Hossain <shakib609@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
opencv-python = "^4.1.2"
imutils = "^0.5.3"
scipy = "^1.4.1"
JSON_minify = "^0.3.0"
dropbox = "^9.4.0"
dlib = "^19.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
